<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_text1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_marginStart="16dp"
                android:gravity="start|center_vertical"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:singleLine="false"
                android:text="@string/product1_name"
                android:textAlignment="viewStart"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textSize="32dp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/product_text2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:paddingBottom="16dp"
                    android:text="@string/product1_price"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textSize="48dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/product_text3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:gravity="bottom"
                    android:text="@string/product1_pfand"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="12dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp" />

                <TextView
                    android:id="@+id/product_text4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_margin="8dp"
                    android:fontFamily="sans-serif"
                    android:gravity="bottom|start"
                    android:singleLine="false"
                    android:text="@string/product1_bcode"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="10sp" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>